Change player buttons color

--- a/src/app/navbar-footer/navbar-footer.component.html
+++ b/src/app/navbar-footer/navbar-footer.component.html
@@ -1,6 +1,6 @@
 <div class="navbar-fixed">
     <nav class="black">
-        <div class="nav-wrapper">
+        <div class="nav-wrapper blue-grey darken-4">
             <ul class="left" [class.disabled]="disabled">
                 <li>
                     <a class="navbar-icon" [class.disabled]="isStop()" (click)="onStop()">
