--- a/src/app/thumbnail-list/thumbnail-list.component.html
+++ b/src/app/thumbnail-list/thumbnail-list.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="(show | async)" 
      infiniteScroll (next)="nextPage()" 
-     [infiniteScrollThrottle]="1000"
-     [infiniteScrollDistance]="400">
+     [infiniteScrollThrottle]="200"
+     [infiniteScrollDistance]="300">
      
-    <ul class="row" *ngIf="!(loading | async)">
+    <ul class="row" *ngIf="!(loading | async) || videos.length > 0">
         <li *ngFor="let video of videos" class="col s12 l3 m6">
             <thumbnail 
                 (clickThumbnail)="onThumbnailClick(video)"
