--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<ul id="nav-mobile" class="left side-nav fixed" [style.overflow-y]="'auto'">
+<ul id="nav-mobile" class="left side-nav fixed" [style.overflow-y]="hover ? 'auto' : 'hidden'">
   <li class="brand center-align" >
     <i class="ion-social-youtube brand-logo"></i>
     <span class="brand-title center-align">NgTube</span>
