--- a/src/app/navbar-footer/navbar-footer.component.css
+++ b/src/app/navbar-footer/navbar-footer.component.css
@@ -38,3 +38,11 @@ li a:hover {
 li a i:hover {
     opacity: 0.6;
 }
+
+select {
+    background-color: #4db5ac;
+    color: white;
+    border-color: transparent;
+    height: 100%;
+    margin-top: 15px;
+}
