--- a/src/app/thumbnail-list/thumbnail-list.component.css
+++ b/src/app/thumbnail-list/thumbnail-list.component.css
@@ -1,9 +1,10 @@
 li {
-    display: inline-flex;
+    display: inline-block;
+    vertical-align: top;
 }
 
 thumbnail {
-    margin: 20px;
+    margin: 10px;
 }
 
 .row .col {
