--- a/src/app/thumbnail/thumbnail.component.css
+++ b/src/app/thumbnail/thumbnail.component.css
@@ -27,11 +27,18 @@
 .duration {
     position: absolute;
     right: 0;
-    font-size: 14px;
-    margin-top: -27px;
-    margin-left: 5px;
-    background-color: grey;
-    color: white;
+    bottom: 0px;
+    font-size: 15px;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #37474f;
+    font-weight: bold;
+    padding: 2px;
+}
+
+.duration > i {
+    padding-left:2px;
+    font-size: 17px;
+    font-weight: bold;
 }
 
 .duration span {
@@ -46,4 +53,8 @@
 
 .thumbnail {
     cursor: pointer;
+}
+
+:host, .thumb, .thumbnail {
+    height: 100%;
 }
