Align add to playlist

--- a/src/app/navbar-footer/navbar-footer.component.html
+++ b/src/app/navbar-footer/navbar-footer.component.html
@@ -1,5 +1,5 @@
 <div class="navbar-fixed">
-    <nav class="black">
+    <nav>
         <div class="nav-wrapper blue-grey darken-4">
             <ul class="left" [class.disabled]="disabled">
                 <li>
