--- a/src/app/ngtube.component.html
+++ b/src/app/ngtube.component.html
@@ -8,10 +8,10 @@
     <div class="indeterminate"></div>
 </div>
 
-<div class="section no-pad-bot" [class.cinema]="(cinemaMode | async) && !(minimize | async)">
+<div class="section no-pad-bot" >
   <div class="container">
     <thumbnail-list></thumbnail-list>
-    <player-container></player-container>
+    <player-container [class.cinema]="(cinemaMode | async) && !(minimize | async)"></player-container>
   </div>
 </div>
 
