--- a/src/app/navbar-footer/navbar-footer.component.html
+++ b/src/app/navbar-footer/navbar-footer.component.html
@@ -59,7 +59,7 @@
                     </p>
                 </li>
                 <li>
-                    <select class="browser-default" (change)="onQuality($event.target.value)">
+                    <select class="browser-default" [(ngModel)]="quality" (change)="onQuality($event.target.value)">
                         <option *ngFor="let quality of qualities" [value]="quality.value">{{quality.text}}</option>
                     </select>
                  </li>
