--- a/src/app/player-container/player-container.component.html
+++ b/src/app/player-container/player-container.component.html
@@ -6,7 +6,8 @@
         [videoId]="video.id"
         [width]="width"
         [height]="height"
-        (stateChange)="stateChange($event.data)">
+        (stateChange)="stateChange($event.data)"
+        (playbackQualityChange)="qualityChange($event.data)">
     </youtube-player>
     <h4 class="col offset-s2 s8" [hidden]="(cinemaMode | async) || minimize">{{video.title}}</h4>
 </div>
