Add activator on title

--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="card-content activator">
-        <span class="grey-text text-darken-4 truncate"> 
+        <span class="grey-text activator text-darken-4 truncate"> 
             <h6 class="activator">{{ video.title }}</h6>
         </span>
     </div>
