Add added to playlist message and change strategy on push

--- a/src/app/thumbnail-list/thumbnail-list.component.html
+++ b/src/app/thumbnail-list/thumbnail-list.component.html
@@ -8,7 +8,9 @@
             <thumbnail 
                 (clickThumbnail)="onThumbnailClick(video)"
                 (clickTitle)="addToPlaylist(video)"
-                [video]="video">
+                [video]="video"
+                [isInPlaylist]="isInPlaylist(video)"
+            >
             </thumbnail>
         </li>
     </ul>
