--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -9,11 +9,9 @@
     background-color: #212121;
     height: 64px;
     color: white;
+    border-right: 8px solid #fafafa;
 }
 
-.brand-logo {
-    color: #d84315;
-}
 
 .brand > * {
     display: inline-block;
@@ -22,10 +20,13 @@
 .brand-title {
     margin-left: 6px;
     font-size: 30px;
+    font-weight: bold;
 }
 
 .brand-logo {
+    color: #4db6ac;
     font-size: 35px;
+    font-weight: bold;
 }
 
 .side-nav {
@@ -33,10 +34,19 @@
     background-color: #323538;
 }
 
+.playlist-icon {
+    color: #d32f2f;
+    font-size: 30px;
+}
+
+.playlist-wrapper > * {
+    display: inline-block;
+}
 
 .sidenav-category {
     color: white;
-    border-right: 8px solid #4db6ac ;
+    border-right: 8px solid #4db6ac;
+    padding: 5px;
 }
 
 .sidenav-category-icon {
