Add to playlist icon in footer bar

--- a/src/app/navbar-footer/navbar-footer.component.css
+++ b/src/app/navbar-footer/navbar-footer.component.css
@@ -59,3 +59,8 @@ input[type="range"] {
     -moz-appearance: none;
     border: none;
 }
+
+.playlist-icon {
+    color: indianred;
+    font-size: 30px;
+}
