--- a/src/app/player-container/player-container.component.html
+++ b/src/app/player-container/player-container.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="video">
+<div class="row player-wrapper" *ngIf="video">
     <youtube-player class="col s12"
         
         playerId="player"
