--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -15,8 +15,8 @@
         </div>
     </div>
     <div class="card-content activator">
-        <span class="grey-text activator text-darken-4 truncate"> 
-            <h6 class="activator">{{ video.title }}</h6>
+        <span class="grey-text activator text-darken-4"> 
+            <h6 class="activator truncate">{{ video.title }}</h6>
         </span>
     </div>
     <div class="card-reveal">
