--- a/src/app/navbar-footer/navbar-footer.component.html
+++ b/src/app/navbar-footer/navbar-footer.component.html
@@ -56,6 +56,7 @@
                 <li [class.disabled]="isStop()">
                     <select class="browser-default" [ngModel]="currentQuality" (ngModelChange)="onQuality($event)">
                         <option *ngFor="let quality of qualities" [value]="quality" [attr.selected]="quality === currentQuality">{{quality | quality}}</option>
+                        <option *ngIf="!qualities.length" selected>Default</option>
                     </select>
                  </li>
                 <li class="icon-divider"></li>
